footnotes added + removed the dashes

--- a/case_study/case_study.tex
+++ b/case_study/case_study.tex
@@ -3,13 +3,12 @@
 \pgfplotsset{compat=1.5}
 
 
-\chapter{A Case Study of Web API Evolution}
+\chapter{\texorpdfstring{A Case Study of Web API Evolution \protect\footnote{S. Sohan, C. Anslow, and F. Maurer, ``A case study of Web API evolution,'' in Proc. of IEEE World Congress on Services (SERVICES). IEEE, 2015, pp. 245-252.}}{S. Sohan, C. Anslow, and F. Maurer, ``A case study of Web API evolution,'' in Proc. of IEEE World Congress on Services (SERVICES). IEEE, 2015, pp. 245–252.}}
 \label{chapter:case_study}
 
 
 \section{Abstract}
 When applications are integrated using web APIs, changes on a web API may break the dependent applications. This problem exists because old versions of the APIs may no longer be supported, a lack of adequate documentation to upgrade to a newer version, and insufficient communication of changes. In this paper we conducted a case study of evolving Web APIs to investigate what changes are made between versions and how the changes are documented and communicated to the API users. The findings are a list of recommendations for practitioners and researchers based on API change profiles, versioning, documentation and communication approaches that are observed in practice. This study will help inform developers of evolving Web APIs to make decision about versioning, documentation and communication methods.
-
 
 
 \section{Introduction}
