--- a/case_study/references.bib
+++ b/case_study/references.bib
@@ -349,3 +349,13 @@ publisher = ieee,
   year          = "1997",
   pages         = "290-294"
 }
+
+@inproceedings{sohan2015case,
+  title={A Case Study of {Web API} Evolution},
+  author={Sohan, SM and Anslow, Craig and Maurer, Frank},
+  booktitle={Proc. of IEEE World Congress on Services (SERVICES)},
+  pages={245--252},
+  year={2015},
+  organization={IEEE}
+}
+
