--- a/cisco_study/cisco_study.tex
+++ b/cisco_study/cisco_study.tex
@@ -1,4 +1,5 @@
-\chapter{Automated Example Oriented REST API Documentation at Cisco}
+\chapter{\texorpdfstring{Automated Example Oriented REST API Documentation at Cisco \protect\footnote{S.Sohan, C.Anslow, and F.Maurer,``Automated example oriented REST API documentation at cisco,'' in Proc. of IEEE/ACM International Conference on Software Engineering, 2017, pp. 213-222.
+}}{Automated Example Oriented REST API Documentation at Cisco}}
 \label{chapter:cisco_study}
 
 
