--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -1,4 +1,4 @@
-\chapter{A Study of the Effectiveness of Usage Examples in REST API Documentation}
+\chapter{\texorpdfstring{A Study of the Effectiveness of Usage Examples in REST API Documentation \protect\footnote{S. Sohan, C. Anslow, F. Maurer, and M. Robillard, ``A study of the effectiveness of usage examples in REST API documentation,'' in to appear in Proc. of IEEE Symposium on Visual Languages and Human-Centric Computing, 2017.}}{A Study of the Effectiveness of Usage Examples in REST API Documentation}}
 \label{chapter:controlled_study}
 
 
