--- a/demo_paper/demo_paper.tex
+++ b/demo_paper/demo_paper.tex
@@ -1,4 +1,4 @@
-\chapter{SpyREST in Action: An Automated RESTful API Documentation Tool}
+\chapter{\texorpdfstring{SpyREST in Action: An Automated RESTful API Documentation Tool \protect\footnote{S. Sohan, C. Anslow, and F. Maurer, ``Spyrest in action: An automated RESTful API documentation tool,'' in Proc. of IEEE/ACM International Conference on Automated Software Engineering, 2015, pp. 813-818.}}{SpyREST in Action: An Automated RESTful API Documentation Tool}}
 \label{chapter:demo_paper}
 
 \section{Abstract}
