--- a/spy_rest/spy_rest.tex
+++ b/spy_rest/spy_rest.tex
@@ -1,4 +1,4 @@
-\chapter{SpyREST: Automated RESTful API Documentation using an HTTP Proxy Server}
+\chapter{\texorpdfstring{SpyREST: Automated RESTful API Documentation using an HTTP Proxy Server \protect\footnote{S. Sohan, C. Anslow, and F. Maurer, Spyrest: ``Automated RESTful API documentation using an HTTP proxy server,'' in Proc. of IEEE/ACM International Conference on Automated Software Engineering, 2015, pp. 271-276.}}{SpyREST: Automated RESTful API Documentation using an HTTP Proxy Server}}
 \label{chapter:spy_rest}
 
 
